--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <title>animalcules</title>
         <link href="canvas.css"rel="stylesheet" type="text/css">
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
         <script type="text/javascript" src="animalcules.js"></script>
     </head>
     <body onload="main()">
-        <canvas width="300" height="300" id="canvas" onclick="myClick()"></canvas>
+        <canvas width="300" height="300" id="canvas" onclick="onClick()"></canvas>
     </body>
 
 </html>
